--- a/update-linux-laptop.yml
+++ b/update-linux-laptop.yml
@@ -1,9 +1,6 @@
 ---
 - hosts: all
-  become: true
+  sudo: yes
   tasks:
-    - name: Update apt repo and cache on all Debian/Ubuntu boxes
-      apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
-
-    - name: Upgrade all packages on servers
-      apt: upgrade=dist force_apt_get=yes
+    - name: Updates apt cache
+      action: apt update_cache=true
