--- a/update-linux-laptop.yml
+++ b/update-linux-laptop.yml
@@ -1,7 +1,11 @@
 ---
 - hosts: all
+  become: yes
   tasks:
-    - name: Updates apt cache
-      action: apt update_cache=true
-      become: yes
-
+    - name: Remove useless packages from the cache
+    apt:
+    autoclean: yes
+    
+    - name: Remove dependencies that are no longer required
+    apt:
+    autoremove: yes
