--- a/update-linux-laptop.yml
+++ b/update-linux-laptop.yml
@@ -2,10 +2,9 @@
 - hosts: all
   become: yes
   tasks:
-    - name: Remove useless packages from the cache
-    apt:
-    autoclean: yes
-    
-    - name: Remove dependencies that are no longer required
-    apt:
-    autoremove: yes
+  - name: Update and upgrade apt packages
+  become: true
+  apt:
+    upgrade: yes
+    update_cache: yes
+    cache_valid_time: 86400 #One day
