--- a/update-linux-laptop.yml
+++ b/update-linux-laptop.yml
@@ -1,6 +1,8 @@
 - name: Update all packages
   hosts: all
   become: true
+  become_user: ubuntu
+  become_method: sudo
   tasks:
   - name: Update package lists
     apt:
@@ -9,3 +11,5 @@
     apt:
       name: "*"
       state: latest
+
+
