--- a/win-newuser.yml
+++ b/win-newuser.yml
@@ -2,9 +2,18 @@
 - name: Add a user
   hosts: all
   gather_facts: false
+  
+  vars_prompt:
+    - name: username
+      prompt: "What is the username?"
+      private: no
+    - name: password
+      prompt: "What is the password?"
+      
   tasks:
     - name: Add User
       win_user:
-        name: ansible
-        password: "@ns1bl3"
+        name: {{ username }}
+        password: {{ password }}
         state: present
+
