--- a/win-newuser.yml
+++ b/win-newuser.yml
@@ -13,7 +13,7 @@
   tasks:
     - name: Add User
       win_user:
-        name: {{ username }}
-        password: {{ password }}
+        name: "{{ username }}"
+        password: "{{ password }}"
         state: present
 
