--- a/win-newuser.yml
+++ b/win-newuser.yml
@@ -6,7 +6,7 @@
   tasks:
     - name: Add User
       win_user:
-        name: "{{ username }}"
-        password: "{{ password }}"
+        name: stephan
+        password: "Welkom01"
         state: present
 
