--- a/win-newuser.yml
+++ b/win-newuser.yml
@@ -1,18 +1,11 @@
 ---
-- name: Ensure user bob is present with address information
-  win_domain_user:
-    name: bob
-    firstname: Bob
-    surname: Smith
-    company: BobCo
-    password: B0bP4ssw0rd
-    state: present
-    groups:
-      - Domain Admins
-    street: 123 4th St.
-    city: Sometown
-    state_province: IN
-    postal_code: 12345
-    country: US
-    attributes:
-      telephoneNumber: 555-123456
+- name: Add a user
+  hosts: all
+  gather_facts: false
+       
+  tasks:
+    - name: Add User
+      win_user:
+        name: Stephan
+        password: "Welkom01"
+        state: present
