--- a/linux-docker-add-plex.yml
+++ b/linux-docker-add-plex.yml
@@ -44,10 +44,8 @@
         state: directory
         mode: "u=rw,g=wx,o=rwx"
       
-    - name: Copy plex-docker.yml
-      copy:
-        src: /files/plex-docker.yml
-        dest: /home/ubuntu/plex2/plex-docker.yml
-        owner: ubuntu
-        group: ubuntu
+    - name: Download foo.conf
+      get_url:
+        url: https://raw.githubusercontent.com/StephRS/ansible/master/docker-plex-start-container.yml
+        dest: /home/ubuntu/plex2/plex.yml
         mode: '0777'
