--- a/win-add-to-domain.yml
+++ b/win-add-to-domain.yml
@@ -6,7 +6,7 @@
   tasks:
     - win_domain_membership:
         dns_domain_name: training.local
-        hostname: windowsserver2019
+        hostname: windowsserver
         domain_admin_user: administrator@training.local
         domain_admin_password: Welkom01
         domain_ou_path: "OU=Servers,DC=training,DC=local"
