--- a/win-updates.yml
+++ b/win-updates.yml
@@ -2,12 +2,12 @@
 - name: Windows Updates
   hosts: all
   gather_facts: false
-
-    win_updates:
+  
+- name: Install all security updates with automatic reboots
+  win_updates:
     category_names:
-      - SecurityUpdates
-      - CriticalUpdates
-      - UpdateRollups
+    - SecurityUpdates
+    reboot: yes
 
         
 
