--- a/linux-ubuntu-update.yml
+++ b/linux-ubuntu-update.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: true
   tasks:
-    - name: Update apt repo and cache on all Debian/Ubuntu boxes
+    - name: Update apt repo and cache on all Ubuntu servers
       apt: update_cache=yes force_apt_get=yes cache_valid_time=3600
 
     - name: Upgrade all packages on servers
