--- a/gcp-create-instance.yml
+++ b/gcp-create-instance.yml
@@ -1,6 +1,5 @@
 ---
-- hosts: all
-  google.cloud.gcp_compute_disk:
+- google.cloud.gcp_compute_disk:
     name: disk-instance
     size_gb: 50
     source_image: projects/ubuntu-os-cloud/global/images/family/ubuntu-1604-lts
