--- a/linux-rhel-update.yml
+++ b/linux-rhel-update.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   tasks:
-  - name: Upgrade all yum packages ansible.
+  - name: Upgrade all yum packages with ansible.
     yum:
       name: "*"
       state: latest
