--- a/gcp-create-instance.yml
+++ b/gcp-create-instance.yml
@@ -1,63 +1,20 @@
-- name: Create an instance
+- name: Create instance(s)
   hosts: localhost
+  connection: local
   gather_facts: no
+
   vars:
-      gcp_project: my-project
-      zone: "us-central1-a"
-      region: "us-central1"
+    project_id: project-id
+    machine_type: n1-standard-1
+    image: debian-7
 
   tasks:
-   - name: create a disk
-     gcp_compute_disk:
-         name: 'disk-instance'
-         size_gb: 50
-         source_image: 'projects/ubuntu-os-cloud/global/images/family/ubuntu-1604-lts'
-         zone: "{{ zone }}"
-         project: "{{ gcp_project }}"
-         auth_kind: "{{ gcp_cred_kind }}"
-         service_account_file: "{{ gcp_cred_file }}"
-         scopes:
-           - https://www.googleapis.com/auth/compute
-         state: present
-     register: disk
-   - name: create a address
-     gcp_compute_address:
-         name: 'address-instance'
-         region: "{{ region }}"
-         project: "{{ gcp_project }}"
-         auth_kind: "{{ gcp_cred_kind }}"
-         service_account_file: "{{ gcp_cred_file }}"
-         scopes:
-           - https://www.googleapis.com/auth/compute
-         state: present
-     register: address
-   - name: create a instance
-     gcp_compute_instance:
-         state: present
-         name: test-vm
-         machine_type: n1-standard-1
-         disks:
-           - auto_delete: true
-             boot: true
-             source: "{{ disk }}"
-         network_interfaces:
-             - network: null # use default
-               access_configs:
-                 - name: 'External NAT'
-                   nat_ip: "{{ address }}"
-                   type: 'ONE_TO_ONE_NAT'
-         zone: "{{ zone }}"
-         project: "{{ gcp_project }}"
-         auth_kind: "{{ gcp_cred_kind }}"
-         service_account_file: "{{ gcp_cred_file }}"
-         scopes:
-           - https://www.googleapis.com/auth/compute
-     register: instance
 
-   - name: Wait for SSH to come up
-     wait_for: host={{ address.address }} port=22 delay=10 timeout=60
-
-   - name: Add host to groupname
-     add_host: hostname={{ address.address }} groupname=new_instances
-
-
+   - name: Launch instances
+     gce:
+         instance_names: dev
+         machine_type: "{{ machine_type }}"
+         image: "{{ image }}"
+         service_account_email: "{{ service_account_email }}"
+         credentials_file: "{{ credentials_file }}"
+         project_id: "{{ project_id }}"
