--- a/gcp-create-instance.yml
+++ b/gcp-create-instance.yml
@@ -1,18 +1,56 @@
-- name: Create instance(s)
+- name: Create a GCP instance
   hosts: localhost
-  connection: local
-  gather_facts: 'no'
   vars:
-    project_id: ansible-289012
-    machine_type: n1-standard-1
-    image: debian-7
+     gcp_project: ansible-289012
+     gcp_cred_kind: 125290713887-compute@developer.gserviceaccount.com
   tasks:
-    - name: Launch instances
-      gce:
-        instance_names: dev
-        machine_type: '{{ machine_type }}'
-        image: '{{ image }}'
-        service_account_email: '{{ service_account_email }}'
-        credentials_file: '{{ credentials_file }}'
-        project_id: '{{ project_id }}'
+    - name: create a disk mapped from RHEL8 image
+      gcp_compute_disk:
+        name: disk-instance
+        size_gb: 50
+        source_image: projects/rhel-cloud/global/images/rhel-8-v20190905
+        zone: us-central1-a
+        project: "{{ gcp_project }}"
+        auth_kind: "{{ gcp_cred_kind }}"
+        state: present
+      register: disk
+
+    - name: create a  VPC network
+      gcp_compute_network:
+        name: network-instance
+        project: "{{ gcp_project }}"
+        auth_kind: "{{ gcp_cred_kind }}"
+        state: present
+      register: network
+
+    - name: create an IPv4 public IP Address
+      gcp_compute_address:
+        name: address-instance
+        region: us-central1
+        project: "{{ gcp_project }}"
+        auth_kind: "{{ gcp_cred_kind }}"
+        state: present
+      register: address
+
+    - name: create the RHEL8 instance
+      gcp_compute_instance:
+        name: rhel8
+        machine_type: n1-standard-1
+        disks:
+        - auto_delete: 'true'
+          boot: 'true'
+          source: "{{ disk }}"
+        network_interfaces:
+        - network: "{{ network }}"
+          access_configs:
+          - name: External NAT
+            nat_ip: "{{ address }}"
+            type: ONE_TO_ONE_NAT
+        zone: us-central1-a
+        project: "{{ gcp_project }}"
+        auth_kind: "{{ gcp_cred_kind }}"
+        state: present
+    - name: Show RHEL8 Instance Details
+      debug:
+        msg: "The RHEL8 instance is accessible at {{ address.address }}"
 
