--- a/gcp-create-instance-nic.yml
+++ b/gcp-create-instance-nic.yml
@@ -33,7 +33,7 @@
           boot: 'true'
           source: "{{ disk }}"
         network_interfaces:
-        - network: default
+        - network: "default"
           access_configs:
           - name: External NAT
             nat_ip: "{{ address }}"
