--- a/gcp-create-instance-custom.yml
+++ b/gcp-create-instance-custom.yml
@@ -6,9 +6,9 @@
   tasks:
     - name: create a disk 
       gcp_compute_disk:
-        name: rhel8
+        name: ubuntu-1604-disk
         size_gb: 20
-        source_image: projects/rhel-cloud/global/images/rhel-8-v20190905
+        source_image: projects/ubuntu-os-cloud/global/images/family/ubuntu-1604-lts
         zone: us-central1-a
         project: "{{ gcp_project }}"
         auth_kind: "{{ gcp_cred_kind }}"
@@ -26,8 +26,8 @@
 
     - name: create the VM instance
       gcp_compute_instance:
-        name: rhel8
-        machine_type: n1-standard-1
+        name: ubuntu-1604-vm
+        machine_type:  e2-micro
         disks:
         - auto_delete: 'true'
           boot: 'true'
